--- a/server/public/index.html
+++ b/server/public/index.html
@@ -6,7 +6,14 @@
     <script type="text/javascript" src="scripts/client.js"></script>
     <title></title>
   </head>
-  <body>
-
+  <body ng-app="myApp">
+    <input type="text" ng-model="userName">
+    <input type="text" ng-model="userMessage">
+    <div ng-controller="OnloadController as control">
+      <button ng-click="control.displayInfo(userName, userMessage)">view info</button>
+      
+    </div>
+    <p>{{ }}</p>
+    <p>{{ }}</p>
   </body>
 </html>
