finished base mode

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -11,9 +11,14 @@
     <input type="text" ng-model="userMessage">
     <div ng-controller="OnloadController as control">
       <button ng-click="control.displayInfo(userName, userMessage)">view info</button>
-      
+      <!--<p>{{ control.info.userName }}</p>
+      <p>{{ control.info.userMessage }}</p>-->
+      <div ng-repeat="info in control.userArray">
+        {{info.userName}}
+        {{info.userMessage}}
+
+      </div>
     </div>
-    <p>{{ }}</p>
-    <p>{{ }}</p>
+
   </body>
 </html>
